--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,10 @@
 <!doctype html>
+<head>
 <title>Test flask Application</title>
+<link rel="stylesheet" type="text/css" href="/static/css/screen.css" />
+
+</head>
+<body>
 
 <div class=page>
   <h1>Testing Flask</h1>
@@ -9,3 +14,5 @@
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
+
+</body>
